<resources>
    <string name="app_name">android-project</string>
    <string name="about_title">私たちについて</string>

    <string name="cb_name1">cb_name1</string>
    <string name="cb_name2">cb_name2</string>

    <string name="bt_save">Save</string>

    <string name="bar_setting">EXAMPLE</string>

    <string name="botNavi_login">LOGIN</string>
    <string name="botNavi_home">HOME</string>
    <string name="botNavi_setting">SETTING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">HOME</string>
    <string name="setting_fragment">SETTING</string>
    <string name="login_fragment">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>